fix: Overflow-y scroll

--- a/resources/assets/css/liman-newlook.css
+++ b/resources/assets/css/liman-newlook.css
@@ -6,7 +6,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: rgba(31, 41, 55, 1);
-  overflow-y: scroll;
 }
 
 hr {
